<resources>
    <string name="app_name">Usege</string>
    <string name="title_activity_login"><b>Login</b></string>
    <string name="title_email"><b>Email</b></string>
    <string name="title_library"><b>Library</b></string>
    <string name="login"><b>Login</b></string>
    <string name="reset_password"><b>Reset pasword</b></string>
    <string name="confirm_account"><b>Confirm account</b></string>
    <string name="need_confirm_account"><b>Your account need to be confirmed before used</b></string>
    <string name="confirm_reset_password"><b>Confirm account</b></string>
    <string name="resend"><b>Resend</b></string>
    <string name="create_account"><b>Create an account</b></string>
    <string name="label_statistic"><b>Statistic</b></string>
    <string name="label_online_library"><b>Online library</b></string>
    <string name="label_plan"><b>Plan</b></string>
    <string name="label_search_hint">Type your interested themes</string>
    <string name="label_select_library">Select library</string>
    <string name="label_total_price"><b>Price</b></string>
    <string name="label_used_space"><b>Used space:</b></string>
    <string name="label_free">Free</string>
    <string name="label_current_plan"><b>Your current plan:</b></string>
    <string name="label_list_of_plans">List of plans:</string>
    <string name="label_payment">Payment</string>
    <string name="label_fill_visa">Please fill out your credit card information</string>
    <string name="label_payment_description">You are purchasing</string>
    <string name="embedded_payment_plan">Plan: %1$s</string>
    <string name="embedded_payment_price">Total price: %1$.0f $</string>
    <string name="label_purchase">Purchase</string>
    <string name="label_view_details"><u>View details</u></string>
    <string name="label_images">Images:</string>
    <string name="label_albums">Albums:</string>
    <string name="label_image_sharing_history">Image sharing history</string>
    <string name="email"><b>Email</b></string>
    <string name="empty" />
    <string name="input_6_digits_below"><b>Please input a 6-digit code below</b></string>
    <string name="password"><b>Password</b></string>
    <string name="label_card_number"><b>Card number</b></string>
    <string name="label_cvv"><b>CVV</b></string>
    <string name="label_expired_date"><b>Expired date</b></string>
    <string name="retype"><b>Retype</b></string>
    <string name="submit"><b>Submit</b></string>
    <string name="forget_password"><b>Forget password</b></string>
    <string name="sign_up"><b>Sign up</b></string>
    <string name="do_not_have_account"><b>Do not have an account?</b></string>
    <string name="already_have_account"><b>Already have an account?</b></string>
    <string name="yes"><b>Yes</b></string>
    <string name="no"><b>No</b></string>
    <string name="confirm_code_has_been_sent">A verification code has been sent to your mailbox</string>
    <string name="confirm_code_could_be_resent_in">Code could be resent in </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>