<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/primary_margin_small"
    tools:context=".userInfo.fragments.StoragePlanDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/section_back"
            android:gravity="center_vertical">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icon_backward_arrow"
                android:layout_marginEnd="@dimen/primary_margin_medium"
                android:id="@+id/btn_back"/>
            <TextView
                style="@style/Usege.Text.LabelTextView"
                android:text="@string/label_payment"/>
        </LinearLayout>
        <TextView
            style="@style/Usege.Text.LabelTextView"
            android:text="@string/label_fill_visa"
            android:layout_gravity="center_horizontal"/>
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/frag_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.group_1.usege.utilities.view.EditTextFragment"
            android:text="@string/label_card_number"
            android:drawableLeft="@drawable/ic_card"
            android:inputType="number"/>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/frag_cvv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.group_1.usege.utilities.view.EditTextFragment"
            android:text="@string/label_cvv"
            android:drawableLeft="@drawable/ic_cvv"
            android:inputType="number"/>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/frag_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.group_1.usege.utilities.view.EditTextFragment"
            android:text="@string/label_expired_date"
            android:drawableLeft="@drawable/icon_image_creation_date"
            android:inputType="date"/>
    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.Button"
        app:backgroundTint="?attr/colorTertiary"
        android:text="@string/submit" />

</androidx.constraintlayout.widget.ConstraintLayout>