<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/section_back"
        android:gravity="center_vertical">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_backward_arrow"
            android:layout_marginEnd="@dimen/primary_margin_medium"
            android:id="@+id/btn_back"/>
        <TextView
            style="@style/Usege.Text.LabelTextView"
            android:text="@string/label_payment"
            android:id="@+id/txt_name"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Usege.Text.LabelTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/section_back"
        android:id="@+id/txt_fill_visa"
        android:textAlignment="center"
        android:text="@string/label_fill_visa"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_fill_visa"
        android:layout_marginHorizontal="@dimen/primary_margin_medium"
        android:gravity="center_horizontal">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/frag_card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.group_1.usege.utilities.view.EditTextFragment"
            android:text="@string/label_card_number"
            android:inputType="number"
            android:drawableLeft="@drawable/ic_card"/>
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/frag_card_cvv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.group_1.usege.utilities.view.EditTextFragment"
            android:text="@string/label_cvv"
            android:inputType="number"
            android:drawableLeft="@drawable/ic_cvv"/>
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/frag_expired_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.group_1.usege.utilities.view.EditTextFragment"
            android:text="@string/label_expired_date"
            android:inputType="date"
            android:drawableLeft="@drawable/icon_image_creation_date"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button"
        android:id="@+id/btn_submit"
        android:text="@string/submit"
        android:layout_marginHorizontal="@dimen/primary_margin_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>