<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".authentication.activities.CreateAccountActivity">


    <com.google.android.material.appbar.MaterialToolbar
        style="@style/Usege.Bar.TitleBar"
        app:title="@string/reset_password" />

    <ImageView
        style="@style/Usege.Image.CenteredWrapImage"
        android:src="@drawable/scr_reset_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/primary_margin_large"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/primary_margin_medium"
            android:orientation="vertical">

            <TextView
                style="@style/Usege.Text.LabelTextView"
                android:text="@string/email" />

            <EditText
                android:id="@+id/edtEmail"
                style="Usege.Text.EditTextView"
                android:drawableStart="@drawable/ic_email" />
        </LinearLayout>

        <Button
            android:id="@+id/btnConfirmSignIn"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/primary_margin_medium"
            android:text="@string/submit" />

    </LinearLayout>


</LinearLayout>