<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.activities.ConfirmAccountActivity">

    <com.google.android.material.appbar.MaterialToolbar
        style="@style/Usege.Bar.TitleBar"
        android:id="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/reset_password" />

    <androidx.fragment.app.FragmentContainerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/frag_confirm_code"
        android:layout_marginTop="@dimen/primary_margin_large"
        android:layout_marginHorizontal="@dimen/primary_margin_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:name="com.group_1.usege.account.fragments.ConfirmCodeFragment"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/frag_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.group_1.usege.utilities.view.EditTextFragment"
        android:text="@string/password"
        android:layout_marginHorizontal="@dimen/primary_margin_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frag_confirm_code"
        android:drawableLeft="@drawable/ic_password_key"
        app:checkRule="true"
        android:inputType="textPassword"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/frag_retype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.group_1.usege.utilities.view.EditTextFragment"
        android:text="@string/retype"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/primary_margin_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frag_password"
        android:drawableLeft="@drawable/ic_password_key"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_submit"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/primary_margin_large"
        android:layout_marginBottom="@dimen/primary_margin_medium"
        android:text="@string/submit" />

</androidx.constraintlayout.widget.ConstraintLayout>